--- a/checks/sites.yml
+++ b/checks/sites.yml
@@ -1,3 +1,10 @@
+spock.kcmerrill.com:
+    url: https://spock.kcmerrill.com
+    try: 3
+    every: 10s
+    fails: slack.failed
+    recovers: slack.recovered
+
 kcmerrill.com:
     url: https://kcmerrill.com
     try: 3
